--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "17f2d565-4f23-485c-b58f-4c01fb1dde59"
   },
   "newProjectRoot": "projects",
   "projects": {
